--- a/style.css
+++ b/style.css
@@ -1,45 +1,59 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    box-sizing: border-box;
+    padding: 0;
 }
 
 .container {
-    height: 300vh; /* 確保有足夠的滾動空間 */
+    height: 100vh;
+    width:100%;
+    box-sizing: border-box;
 }
 
 .content {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; 
-    padding: 50px;
-    gap: 50px;
+    justify-content: space-between; 
+    align-items: center; 
+    flex-direction: row;
+    height: 100vh;
+    width: 100%;
+    padding: 0px;
+    gap: 30px;
+    background-color: beige;
 }
-.image-section{
-    display: flex;
-    width: 45%;
+
+.image-section {
     position: relative;
+    display: flex;
+    flex-direction: column; 
+    justify-content: flex-start; 
+    align-items: flex-start;
+    width: 50%;
+    background-color: red;
 }
-.text-section{
+
+.content-col {
+    opacity: 0;
+    width:100%;
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: aqua;
+}
+
+.text-section {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
-    
-    width: 45%;
-    position: relative;
+    width: 50%;
+    background-color: blue;
 }
-.text{
-    opacity: 1;
-    transform-origin: right;
+
+.text {
     font-size: 2rem;
-}
-.image {
-    opacity: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
 }
 
 .image {
