--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
     left: 40%;
     transform: translate(-50%, -50%);
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
     justify-content: flex-start;
 }
@@ -101,22 +101,50 @@ body {
 @media (max-width:768px) {
     .scroll-change-text-and-img{
         display: flex;
-        justify-content: center; 
+        justify-content: space-around; 
         align-items: center; 
-        flex-direction: row;
-        height: 100vh;
+        flex-direction: column;
+        height: 90%;
         width: 100%;
         padding: 0px;
         gap: 20px;
     }
     .text-section{
-        width: 40%;
+        width: 100%;
+        column-gap:20px;
+        flex-direction: row;
+        align-items: flex-end;
+        flex-wrap: wrap;
     }
     .content-section{
         width: 60%;
     }
     .text{
         font-size: 25px;
+        white-space: nowrap;
+        transform-origin: center;
+    }
+    .content-section {
+        position: relative;
+        display: flex;
+        flex-direction: column; 
+        justify-content: center; 
+        align-items: center;
+        width: 70%;
+        height: 50vh;
+    }
+    .content-col {
+        opacity: 0;
+        width: 100%;
+        position: absolute;
+        height: 100%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
 
