--- a/style.css
+++ b/style.css
@@ -23,14 +23,24 @@ body {
     padding: 0px;
     gap: 30px;
 }
-.text-section {
+.text-section-flex {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
     width: 40%;
+    height: 100vh;
+}
+.text-section{
+    display: flex;
+    flex-direction: column;
+    width: auto;
 }
 .text {
+    width: auto;
+    border: 1px solid #fff;
+    padding: 2px 25px;
+    border-radius: 50px;
     font-size: 2rem;
     opacity: 0.2;
     transform: scale(0.8); 
@@ -73,50 +83,29 @@ body {
     border: 1px solid #e0e0e0;
     border-radius: 30px;
 }
-@media(max-width: 1400px){ 
-    .content-text,.image{
-        width: 80%;
-    }
-    .content-col{
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    }
-}
-@media(max-width: 1200px){ 
-    .content-text,.image{
-        width: 80%;
-    }
-}
-@media(max-width: 990px){ 
-    .content-text,.image{
-        width: 100%;
-    }
-}
 
 @media (max-width:768px) {
     .scroll-change-text-and-img{
         display: flex;
-        justify-content: space-around; 
+        justify-content: space-evenly; 
         align-items: center; 
         flex-direction: column;
-        height: 90%;
+        height: 100%;
         width: 100%;
         padding: 0px;
-        gap: 20px;
+        gap: 0px;
     }
-    .text-section{
+    .text-section-flex{
+        height: auto;
         width: 100%;
-        column-gap:20px;
+        row-gap:20px;
         flex-direction: row;
-        align-items: flex-end;
+        align-items: center;
+        justify-content: center;
         flex-wrap: wrap;
     }
-    .content-section{
-        width: 60%;
-    }
     .text{
-        font-size: 25px;
+        font-size: 20px;
         white-space: nowrap;
         transform-origin: center;
     }
@@ -127,7 +116,10 @@ body {
         justify-content: center; 
         align-items: center;
         width: 90%;
-        height: 50vh;
+        height: 50%;
+    }
+    .content-text,.image{
+        width:90%;
     }
 }
 
