--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ body {
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
     }
     .text{
         font-size: 20px;
