--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 .text-section{
     display: flex;
     flex-direction: column;
+    align-items: flex-end; 
     width: auto;
 }
 .text {
@@ -45,6 +46,7 @@ body {
     opacity: 0.2;
     transform: scale(0.8); 
     transform-origin: right;
+    flex: 0 0 auto;
 }
 
 .text:first-child {
@@ -104,10 +106,24 @@ body {
         justify-content: center;
         flex-wrap: nowrap;
     }
+    .text-section:first-child  {
+        align-items: flex-end;
+        transform-origin: right;
+    }
+    .text-section:nth-child(2) {
+        align-items: flex-start; 
+        transform-origin: left;
+    }
+    .text-section:first-child .text {
+        transform-origin: right; 
+    }
+
+    .text-section:nth-child(2) .text {
+        transform-origin: left; 
+    }
     .text{
         font-size: 20px;
         white-space: nowrap;
-        transform-origin: center;
     }
     .content-section {
         position: relative;
