--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     height: 100vh;
     width:100%;
     box-sizing: border-box;
+    margin-top: 100vh;
 }
 
 .scroll-change-text-and-img{
@@ -49,10 +50,6 @@ body {
     flex: 0 0 auto;
 }
 
-.scroll-change-text:first-child {
-    opacity: 1;
-    transform: scale(1);
-}
 
 .scroll-change-content-section {
     position: relative;
